[package]
name = "a_core"
version = "0.1.0"
authors = ["Abby <i@abby.md>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.2"
volatile = "0.2.6"

[package.metadata.bootimage]
default-target = "x86_64-aCore.json"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

